<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="3dp">

    <ImageView
        android:id="@+id/ivProfileImg"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/ic_launcher"
        android:layout_margin="5dp" />
    
    <LinearLayout
        	android:id="@+id/llTopLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ivProfileImg"
            android:layout_margin="2dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true">
            
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:fontFamily="sans-serif-bold"/>

        <TextView
            android:id="@+id/tvScreenName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/foo_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="sans-serif"/>
        
        <TextView
            android:id="@+id/tvTimeAgo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="2dp"
            android:gravity="right"
            android:text="@string/fourd_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="sans-serif-light"/>
        
	</LinearLayout>

    <TextView
        android:id="@+id/tvTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llTopLine"
        android:layout_toRightOf="@+id/ivProfileImg"
        android:text="@string/tweet_text_label"
        android:autoLink="all"
        android:textAppearance="?android:attr/textAppearanceSmall" 
        android:layout_margin="2dp"/>
    
    <LinearLayout
        	android:id="@+id/llTweetOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTweet"
            android:layout_margin="5dp"
            android:layout_centerHorizontal="true">

            
    	<ImageView
        	android:id="@+id/ivTweetReply"
        	android:layout_width="20dp"
        	android:layout_height="20dp"
        	android:src="@drawable/ic_comment"/>
    	
    	<ImageView
        	android:id="@+id/ivTweetRetweet"
        	android:layout_width="20dp"
        	android:layout_height="20dp"
        	android:layout_marginLeft="50dp"
        	android:src="@drawable/ic_tweet_retweet"/>

    	<TextView
            android:id="@+id/tvTweetRetweet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_retweet_count_label"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="sans-serif-light"/>
    		
    	<ImageView
        	android:id="@+id/ivTweetFavorite"
        	android:layout_width="20dp"
        	android:layout_height="20dp"
        	android:layout_marginLeft="50dp"
        	android:src="@drawable/ic_tweet_fav"/>
    	
        <TextView
            android:id="@+id/tvTweetFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_fav_count_label"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:fontFamily="sans-serif"/>
        
        
	</LinearLayout>
    

</RelativeLayout>
